# querycast

./: .gitignore  CLAUDE.md  README.html  index.html  manifest.json  preview.html  privacy.html  service-worker.js  style.css  vercel.json
js/: auth.js  concurrency.js  config.js  defaults.js  drive-backup.js  feed.js  inapp-browser-gate.js  main.js  player.js  quota.js  rss-fetcher.js  scoring.js  settings-drawer.js  setup-screen.js  storage.js  theme.js  video-actions.js  youtube-api.js
js/preview/: auth-stub.js  drive-backup-stub.js  mock-data.js  player-stub.js  rss-fetcher-stub.js  storage-stub.js  youtube-api-stub.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  feed.rs  lib.rs  main.rs
