[package]
name = "querycast"
version = "0.1.0"
description = "User-controlled YouTube subscription feed"
authors = ["soopadrive"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "querycast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
